# task-cli

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
task_cli/: foo.py
tests/: test_foo.py
